Moved null ID edge case tests to mappers from integration to unit tests.